--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,5 @@ jobs:
         uses: actions/setup-node@v3
       - name: Install API Catalog CLI
         run: npm i api-catalog-cli
+      - name: Catalog an API
+        run: api-catalog help
