--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
       - name: Install API Catalog CLI
-        run: npm i api-catalog-cli
+        run: npm install -g api-catalog-cli@latest
       - name: Catalog an API
         run: api-catalog help
