--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Another way to call an API
         uses: fjogeleit/http-request-action@v1
         with:
-          url: 'https://example.com/api/v2/endpoint'
+          url: 'https://httpbin.org/get'
           method: 'GET'
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"key_1": "value_1", "key_2": "value_2"}'
